[project]
name = "amplifier-module-tool-todo"
version = "1.0.0"
description = "AI self-accountability tool for managing todo lists"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.entry-points."amplifier.modules"]
tool-todo = "amplifier_module_tool_todo:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "amplifier-core",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.3.0",
]

[tool.uv.sources]
amplifier-core = { git = "https://github.com/microsoft/amplifier-core", branch = "main" }
